update index with task 2

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -7,13 +7,52 @@
 <body>
     <header>
         <a href="link_url">
-            <img src="image_url" alt="SmileLogo">
+            <img src="image_url.jpg" alt="SmileLogo">
         </a>
         <div>
             <a href="#">COURSES</a>
             <a href="#">PRICING</a>
             <a href="#">LOGIN</a>
         </div>
+        <section>
+            <div>
+                <h1> Get schooled </h1>
+                <p> SMILES GRIN LAUGH</p>
+                <button> Register for free </button>
+            </div>
+            <div>
+            <h2> Learn from the pros </h2>
+            <div>
+                <div>
+                    <img src="phillip_massey.jpg" alt="PhillipMassey">
+                    <h3>Phillip Massey</h3>
+                    <p>&laquo;Smile of the year&raquo;</p>
+                    <p> 2018 - 2019 </p>
+                </div>
+                <div>
+                    <img src="nannie_lawrence.jpg" alt="NannieLawrence">
+                    <h3>Nannie Lawrence</h3>
+                    <p> Best &laquo;little smile&raquo;</p>
+                    <p> 2017 </p>
+                </div>
+                <div>
+                    <img src="bruce_walters.jpg" alt="BruceWalters">
+                    <h3>Bruce Walters</h3>
+                    <p> Best &laquo;Friend Smile&raquo;</p>
+                    <p>live performance 2019</p>
+                </div>
+                <div>
+                    <img src="henry_hughes.jpg" alt="HenryHughes">
+                    <h3>Henry Hughes</h3>
+                    <p>&laquo;24h smiles&raquo; winner</p>
+                    <p> 2016 - 2019 </p>
+                </div>
+            </div>
+            </div>
+        </section>
     </header>
+    <main>
+
+    </main>
 </body>
 </html>
