--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -52,6 +52,7 @@
         </section>
     </header>
     <main>
+
         <section>
             <div>
                 <img src="quote_image.jpg" alt="QuoteImage">
@@ -64,6 +65,96 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <h1>Most popular tutorials</h1>
+            <div>
+                <div>
+                    <img src="diagonal_smile.jpg" alt="DiagonalSmile">
+                    <h2>Diagonal Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="phillip_massey.jpg" alt="PhillipMassey">
+                        <h3>Phillip Massey</h3>
+                        <div>
+                            <div>
+                                <p>8 min</p>
+                            </div>
+                            <div>
+                            <img src="1star.jpg" alt="1-star">
+                            <img src="2star.jpg" alt="2-star">
+                            <img src="3star.jpg" alt="3-star">
+                            <img src="4star.jpg" alt="4-star">
+                            <img src="5star.jpg" alt="5-star">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="sad_smile.jpg" alt="SadSmile">
+                    <h2>Sad Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="phillip_massey.jpg" alt="PhillipMassey">
+                        <h3>Phillip Massey</h3>
+                        <div>
+                            <div>
+                                <p>8 min</p>
+                            </div>
+                            <div>
+                            <img src="1star.jpg" alt="1-star">
+                            <img src="2star.jpg" alt="2-star">
+                            <img src="3star.jpg" alt="3-star">
+                            <img src="4star.jpg" alt="4-star">
+                            <img src="5star.jpg" alt="5-star">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="natural_smile.jpg" alt="NaturalSmile">
+                    <h2>Natural Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="phillip_massey.jpg" alt="PhillipMassey">
+                        <h3>Phillip Massey</h3>
+                        <div>
+                            <div>
+                                <p>8 min</p>
+                            </div>
+                            <div>
+                            <img src="1star.jpg" alt="1-star">
+                            <img src="2star.jpg" alt="2-star">
+                            <img src="3star.jpg" alt="3-star">
+                            <img src="4star.jpg" alt="4-star">
+                            <img src="5star.jpg" alt="5-star">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="happy_smile.jpg" alt="HappySmile">
+                    <h2>Happy Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="phillip_massey.jpg" alt="PhillipMassey">
+                        <h3>Phillip Massey</h3>
+                        <div>
+                            <div>
+                                <p>8 min</p>
+                            </div>
+                            <div>
+                            <img src="1star.jpg" alt="1-star">
+                            <img src="2star.jpg" alt="2-star">
+                            <img src="3star.jpg" alt="3-star">
+                            <img src="4star.jpg" alt="4-star">
+                            <img src="5star.jpg" alt="5-star">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
     </main>
 </body>
 </html>
