--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -154,6 +154,32 @@
                     </div>
                 </div>
         </section>
+        <section>
+            <h1>Free membership</h1>
+            <div>
+                <div>
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div>
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
+                    <h2>Lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <button>REGISTER FOR FREE</button>
+        </section>
 
     </main>
 </body>
