task 7 - footer completion

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -207,5 +207,24 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            <div>
+                <img src="smile_logo.jpg" alt="logo">
+                <div>
+                    <a href="#">
+                        <img src="facebook_icon.jpg" alt="Facebook">
+                    </a>
+                    <a href="#">
+                        <img src="twitter_icon.jpg" alt="Twitter">
+                    </a>
+                    <a href="#">
+                        <img src="instagram_icon.jpg" alt="Instagram">
+                    </a>
+                </div>
+            </div>
+            <p>&copy;smileschool 2020</p>
+        </div>
+    </footer>
 </body>
 </html>
