HTML sectioning off

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -7,39 +7,48 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <a href="link_url">
+            <!-- SmileSchool Logo -->
             <img src="image_url.jpg" alt="SmileLogo">
         </a>
+        <!-- Menu Links -->
         <div>
             <a href="#">COURSES</a>
             <a href="#">PRICING</a>
             <a href="#">LOGIN</a>
         </div>
         <section>
+            <!-- Banner -->
             <div>
                 <h1> Get schooled </h1>
                 <p> SMILES GRIN LAUGH</p>
                 <button> Register for free </button>
             </div>
+            <!-- Pro Head Shots with Awards-->
             <div>
             <h2> Learn from the pros </h2>
             <div>
+                <!-- Phillip Massey -->
                 <div>
                     <img src="phillip_massey.jpg" alt="PhillipMassey">
                     <h3>Phillip Massey</h3>
                     <p>&laquo;Smile of the year&raquo; 2018-2019</p>
                 </div>
+                <!-- Nannie Lawrence -->
                 <div>
                     <img src="nannie_lawrence.jpg" alt="NannieLawrence">
                     <h3>Nannie Lawrence</h3>
                     <p> Best &laquo;little smile&raquo; 2017</p>
                 </div>
+                <!-- Bruce Walters -->
                 <div>
                     <img src="bruce_walters.jpg" alt="BruceWalters">
                     <h3>Bruce Walters</h3>
                     <p> Best &laquo;Friend Smile&raquo; live performance 2019</p>
                 </div>
+                <!-- Henry Hughes -->
                 <div>
                     <img src="henry_hughes.jpg" alt="HenryHughes">
                     <h3>Henry Hughes</h3>
@@ -50,9 +59,10 @@
         </section>
     </header>
     <main>
-
+        <!-- Testimonial -->
         <section>
             <div>
+                <!-- Laughing guy with quote -->
                 <img src="quote_image.jpg" alt="QuoteImage">
                 <div>
                     <blockquote>
@@ -63,10 +73,11 @@
                 </div>
             </div>
         </section>
-
+        <!-- Tutorial Section with Video Links -->
         <section>
             <h1>Most popular tutorials</h1>
             <div>
+                <!-- Diagonal Smile -->
                 <div>
                     <img src="diagonal_smile.jpg" alt="DiagonalSmile">
                     <h2>Diagonal Smile</h2>
@@ -86,6 +97,7 @@
                     </div>
                     </div>
                 </div>
+                <!-- Sad Smile -->
                 <div>
                     <img src="sad_smile.jpg" alt="SadSmile">
                     <h2>Sad Smile</h2>
@@ -105,6 +117,7 @@
                     </div>
                     </div>
                 </div>
+                <!-- Natural Smile -->
                 <div>
                     <img src="natural_smile.jpg" alt="NaturalSmile">
                     <h2>Natural Smile</h2>
@@ -124,6 +137,7 @@
                     </div>
                     </div>
                 </div>
+                <!-- Happy Smile -->
                 <div>
                     <img src="happy_smile.jpg" alt="HappySmile">
                     <h2>Happy Smile</h2>
@@ -145,9 +159,11 @@
                 </div>
             </div>
         </section>
+        <!-- Free Membership Section -->
         <section>
             <h1>Free membership</h1>
             <div>
+                <!-- Lorem ipsum div x4 -->
                 <div>
                     <img src="lorem_ipsum.jpg" alt="LoremIpsum">
                     <h2>Lorem ipsum</h2>
@@ -169,11 +185,14 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
+            <!-- Register button -->
             <button>REGISTER FOR FREE</button>
         </section>
 
+        <!-- F.A.Q. Section-->
         <section>
             <h1>F.A.Q.</h1>
+            <!-- How does this work div x4-->
             <div>
                 <div class="row_block">
                     <div class="item_block">
@@ -198,11 +217,14 @@
             </div>
         </section>
     </main>
+    <!-- Footer section -->
     <footer>
         <div>
             <div>
+                <!-- Smile School Logo -->
                 <img src="smile_logo.jpg" alt="logo">
                 <div>
+                    <!-- Social Media Icons -->
                     <a href="#">
                         <img src="facebook_icon.jpg" alt="Facebook">
                     </a>
@@ -214,6 +236,7 @@
                     </a>
                 </div>
             </div>
+            <!-- Copyright -->
             <p>&copy;smileschool 2020</p>
         </div>
     </footer>
