--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -8,51 +8,51 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <a href="link_url">
+    <header id="header">
+        <a href="link_url" id="logo-link">
             <!-- SmileSchool Logo -->
-            <img src="image_url.jpg" alt="SmileLogo">
+            <img src="image_url.jpg" alt="SmileLogo" id="logo-img">
         </a>
         <!-- Menu Links -->
-        <div>
-            <a href="#">COURSES</a>
-            <a href="#">PRICING</a>
-            <a href="#">LOGIN</a>
+        <div id="menu-links">
+            <a href="#" class="menu-link">COURSES</a>
+            <a href="#" class="menu-link">PRICING</a>
+            <a href="#" class="menu-link">LOGIN</a>
         </div>
-        <section>
+        <section id="banner-section">
             <!-- Banner -->
-            <div>
-                <h1> Get schooled </h1>
-                <p> SMILES GRIN LAUGH</p>
-                <button> Register for free </button>
+            <div id="banner">
+                <h1 id=banner-heading">Get schooled </h1>
+                <p id="banner-subheading"> SMILES GRIN LAUGH</p>
+                <button id="register-button"> Register for free </button>
             </div>
             <!-- Pro Head Shots with Awards-->
-            <div>
-            <h2> Learn from the pros </h2>
-            <div>
+            <div id="pro-section">
+            <h2 id="pro-heading"> Learn from the pros </h2>
+            <div id="pro-headshots">
                 <!-- Phillip Massey -->
-                <div>
-                    <img src="phillip_massey.jpg" alt="PhillipMassey">
-                    <h3>Phillip Massey</h3>
-                    <p>&laquo;Smile of the year&raquo; 2018-2019</p>
+                <div class="pro-container" id="phillip">
+                    <img src="phillip_massey.jpg" alt="PhillipMassey" class="pro-img">
+                    <h3 class="pro-name">Phillip Massey</h3>
+                    <p class="pro-award">&laquo;Smile of the year&raquo; 2018-2019</p>
                 </div>
                 <!-- Nannie Lawrence -->
-                <div>
-                    <img src="nannie_lawrence.jpg" alt="NannieLawrence">
-                    <h3>Nannie Lawrence</h3>
-                    <p> Best &laquo;little smile&raquo; 2017</p>
+                <div class="pro-container" id="nannie">
+                    <img src="nannie_lawrence.jpg" alt="NannieLawrence" class="pro-img">
+                    <h3 class="pro-name">Nannie Lawrence</h3>
+                    <p class="pro-award"> Best &laquo;little smile&raquo; 2017</p>
                 </div>
                 <!-- Bruce Walters -->
-                <div>
-                    <img src="bruce_walters.jpg" alt="BruceWalters">
-                    <h3>Bruce Walters</h3>
-                    <p> Best &laquo;Friend Smile&raquo; live performance 2019</p>
+                <div class="pro-container" id="bruce">
+                    <img src="bruce_walters.jpg" alt="BruceWalters" class="pro-img">
+                    <h3 class="pro-name">Bruce Walters</h3>
+                    <p class="pro-award"> Best &laquo;Friend Smile&raquo; live performance 2019</p>
                 </div>
                 <!-- Henry Hughes -->
-                <div>
-                    <img src="henry_hughes.jpg" alt="HenryHughes">
-                    <h3>Henry Hughes</h3>
-                    <p>&laquo;24h smiles&raquo; winner 2016 - 2019 </p>
+                <div class="pro-container" id="henry">
+                    <img src="henry_hughes.jpg" alt="HenryHughes" class="pro-img">
+                    <h3 class="pro-name">Henry Hughes</h3>
+                    <p class="pro-award">&laquo;24h smiles&raquo; winner 2016 - 2019 </p>
                 </div>
             </div>
             </div>
