class/ID creation for testimonial/tutorial sections

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -60,100 +60,100 @@
     </header>
     <main>
         <!-- Testimonial -->
-        <section>
-            <div>
+        <section id="testimonial-section">
+            <div id="testimonial">
                 <!-- Laughing guy with quote -->
-                <img src="quote_image.jpg" alt="QuoteImage">
-                <div>
+                <img src="quote_image.jpg" alt="QuoteImage" id="quote-img">
+                <div id="quote-text">
                     <blockquote>
                        &laquo;Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!  
                     </blockquote>
-                    <p>Person Name</p>
-                    <p>weather presenter</p>
+                    <p id="quote-author">Person Name</p>
+                    <p id="quote-title">weather presenter</p>
                 </div>
             </div>
         </section>
         <!-- Tutorial Section with Video Links -->
-        <section>
-            <h1>Most popular tutorials</h1>
-            <div>
+        <section id="tutorials-section">
+            <h1 id="tutorials-heading">Most popular tutorials</h1>
+            <div id="tutorials">
                 <!-- Diagonal Smile -->
-                <div>
-                    <img src="diagonal_smile.jpg" alt="DiagonalSmile">
-                    <h2>Diagonal Smile</h2>
-                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="phillip_massey.jpg" alt="PhillipMassey">
-                        <h3>Phillip Massey</h3>
-                    <div>
-                        <div>
-                            <img src="1star.jpg" alt="1-star">
-                            <img src="2star.jpg" alt="2-star">
-                            <img src="3star.jpg" alt="3-star">
-                            <img src="4star.jpg" alt="4-star">
-                            <img src="5star.jpg" alt="5-star">
+                <div class="tutorial-card" id="diagonal-smile">
+                    <img src="diagonal_smile.jpg" alt="DiagonalSmile" class="tutorial-img">
+                    <h2 class="tutorial-title">Diagonal Smile</h2>
+                    <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="tutorial-author">
+                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <h3 class="author-name">Phillip Massey</h3>
+                    <div class="tutorial-rating">
+                        <div class="star-rating">
+                            <img src="1star.jpg" alt="1-star" class="star-img">
+                            <img src="2star.jpg" alt="2-star" class="star-img">
+                            <img src="3star.jpg" alt="3-star" class="star-img">
+                            <img src="4star.jpg" alt="4-star" class="star-img">
+                            <img src="5star.jpg" alt="5-star" class="star-img">
                         </div>
-                        <p>8 min</p>
+                        <p class="tutorial-length">8 min</p>
                     </div>
                     </div>
                 </div>
                 <!-- Sad Smile -->
-                <div>
-                    <img src="sad_smile.jpg" alt="SadSmile">
-                    <h2>Sad Smile</h2>
-                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="phillip_massey.jpg" alt="PhillipMassey">
-                        <h3>Phillip Massey</h3>
-                    <div>
-                        <div>
-                            <img src="1star.jpg" alt="1-star">
-                            <img src="2star.jpg" alt="2-star">
-                            <img src="3star.jpg" alt="3-star">
-                            <img src="4star.jpg" alt="4-star">
-                            <img src="5star.jpg" alt="5-star">
+                <div class="tutorial-card" id="sad-smile">
+                    <img src="sad_smile.jpg" alt="SadSmile" class="tutorial-img">
+                    <h2 class="tutorial-title">Sad Smile</h2>
+                    <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="tutorial-author">
+                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <h3 class="author-name">Phillip Massey</h3>
+                    <div class="tutorial-rating">
+                        <div class="star-rating">
+                            <img src="1star.jpg" alt="1-star" class="star-img">
+                            <img src="2star.jpg" alt="2-star" class="star-img">
+                            <img src="3star.jpg" alt="3-star" class="star-img">
+                            <img src="4star.jpg" alt="4-star" class="star-img">
+                            <img src="5star.jpg" alt="5-star" class="star-img">
                         </div>
-                        <p>8 min</p>
+                        <p class="tutorial-length">8 min</p>
                     </div>
                     </div>
                 </div>
                 <!-- Natural Smile -->
-                <div>
-                    <img src="natural_smile.jpg" alt="NaturalSmile">
-                    <h2>Natural Smile</h2>
-                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="phillip_massey.jpg" alt="PhillipMassey">
-                        <h3>Phillip Massey</h3>
-                    <div>
-                        <div>
-                            <img src="1star.jpg" alt="1-star">
-                            <img src="2star.jpg" alt="2-star">
-                            <img src="3star.jpg" alt="3-star">
-                            <img src="4star.jpg" alt="4-star">
-                            <img src="5star.jpg" alt="5-star">
+                <div class="tutorial-card" id="natural-smile">
+                    <img src="natural_smile.jpg" alt="NaturalSmile" class="tutorial-img">
+                    <h2 class="tutorial-title">Natural Smile</h2>
+                    <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="tutorial-author">
+                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <h3 class="author-name">Phillip Massey</h3>
+                    <div class="tutorial-rating">
+                        <div class="star-rating">
+                            <img src="1star.jpg" alt="1-star" class="star-img">
+                            <img src="2star.jpg" alt="2-star" class="star-img">
+                            <img src="3star.jpg" alt="3-star" class="star-img">
+                            <img src="4star.jpg" alt="4-star" class="star-img">
+                            <img src="5star.jpg" alt="5-star" class="star-img">
                         </div>
-                        <p>8 min</p>
+                        <p class="tutorial-length">8 min</p>
                     </div>
                     </div>
                 </div>
                 <!-- Happy Smile -->
-                <div>
-                    <img src="happy_smile.jpg" alt="HappySmile">
-                    <h2>Happy Smile</h2>
-                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="phillip_massey.jpg" alt="PhillipMassey">
-                        <h3>Phillip Massey</h3>
-                    <div>
-                        <div>
-                            <img src="1star.jpg" alt="1-star">
-                            <img src="2star.jpg" alt="2-star">
-                            <img src="3star.jpg" alt="3-star">
-                            <img src="4star.jpg" alt="4-star">
-                            <img src="5star.jpg" alt="5-star">
+                <div class="tutorial-card" id="happy-smile">
+                    <img src="happy_smile.jpg" alt="HappySmile" class="tutorial-img">
+                    <h2 class="tutorial-title">Happy Smile</h2>
+                    <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div class="tutorial-author">
+                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <h3 class="author-name">Phillip Massey</h3>
+                    <div class="tutorial-rating">
+                        <div class="star-rating">
+                            <img src="1star.jpg" alt="1-star" class="star-img">
+                            <img src="2star.jpg" alt="2-star" class="star-img">
+                            <img src="3star.jpg" alt="3-star" class="star-img">
+                            <img src="4star.jpg" alt="4-star" class="star-img">
+                            <img src="5star.jpg" alt="5-star" class="star-img">
                         </div>
-                        <p>8 min</p>
+                        <p class="tutorial-length">8 min</p>
                     </div>
                     </div>
                 </div>
