class/ID creation for membership/FAQ/footer sections

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <!-- Header -->
     <header id="header">
         <a href="link_url" id="logo-link">
@@ -22,7 +23,7 @@
         <section id="banner-section">
             <!-- Banner -->
             <div id="banner">
-                <h1 id=banner-heading">Get schooled </h1>
+                <h1 id="banner-heading">Get schooled </h1>
                 <p id="banner-subheading"> SMILES GRIN LAUGH</p>
                 <button id="register-button"> Register for free </button>
             </div>
@@ -59,6 +60,7 @@
         </section>
     </header>
     <main>
+
         <!-- Testimonial -->
         <section id="testimonial-section">
             <div id="testimonial">
@@ -73,6 +75,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Tutorial Section with Video Links -->
         <section id="tutorials-section">
             <h1 id="tutorials-heading">Most popular tutorials</h1>
@@ -159,85 +162,84 @@
                 </div>
             </div>
         </section>
+
         <!-- Free Membership Section -->
-        <section>
-            <h1>Free membership</h1>
-            <div>
+        <section id="membership-section">
+            <h1 id="membership-heading">Free membership</h1>
+            <div id="membership-containers">
                 <!-- Lorem ipsum div x4 -->
-                <div>
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
-                    <h2>Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="membership-block">
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <h2 class="membership-block-title">Lorem ipsum</h2>
+                    <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
-                    <h2>Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="membership-block">
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <h2 class="membership-block-title">Lorem ipsum</h2>
+                    <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
-                    <h2>Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="membership-block">
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <h2 class="membership-block-title">Lorem ipsum</h2>
+                    <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum">
-                    <h2>Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="membership-block">
+                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <h2 class="membership-block-title">Lorem ipsum</h2>
+                    <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
             <!-- Register button -->
-            <button>REGISTER FOR FREE</button>
+            <button id="reg-button-2">REGISTER FOR FREE</button>
         </section>
 
         <!-- F.A.Q. Section-->
-        <section>
-            <h1>F.A.Q.</h1>
+        <section id="faq-section">
+            <h1 id="faq-heading">F.A.Q.</h1>
+            <div id="faq-content">
             <!-- How does this work div x4-->
-            <div>
-                <div class="row_block">
-                    <div class="item_block">
-                        <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="faq-row">
+                    <div class="faq-item">
+                        <h2 class="faq-question">How does this work?</h2>
+                        <p class="faq-response">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                    <div class="item_block">
-                        <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="faq-item">
+                        <h2 class="faq-question">How does this work?</h2>
+                        <p class="faq-response">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
-                <div class="row_block">
-                    <div class="item_block">
-                        <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="faq-row">
+                    <div class="faq-item">
+                        <h2 class="faq-question">How does this work?</h2>
+                        <p class="faq-response">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                    <div class="item_block">
-                        <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="faq-item">
+                        <h2 class="faq-question">How does this work?</h2>
+                        <p class="faq-response">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
     <!-- Footer section -->
-    <footer>
-        <div>
-            <div>
+    <footer id="footer-section">
+        <div id="footer-content">
+            <div id="footer-logo">
                 <!-- Smile School Logo -->
-                <img src="smile_logo.jpg" alt="logo">
-                <div>
+                <img src="smile_logo.jpg" alt="logo" id="footer-logo-img" >
+            </div>
+                <div id="social-icons">
                     <!-- Social Media Icons -->
                     <a href="#">
-                        <img src="facebook_icon.jpg" alt="Facebook">
-                    </a>
+                        <img src="facebook_icon.jpg" alt="Facebook" class="social-icon"></a>
                     <a href="#">
-                        <img src="twitter_icon.jpg" alt="Twitter">
-                    </a>
+                        <img src="twitter_icon.jpg" alt="Twitter" class="social-icon"></a>
                     <a href="#">
-                        <img src="instagram_icon.jpg" alt="Instagram">
-                    </a>
+                        <img src="instagram_icon.jpg" alt="Instagram" class="social-icon"></a>
                 </div>
-            </div>
             <!-- Copyright -->
-            <p>&copy;smileschool 2020</p>
+            <p class="copyright-text">&copy;smileschool 2020</p>
         </div>
     </footer>
 </body>
