--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,23 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmileSchool</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!-- Header -->
-    <header id="header">
-        <a href="link_url" id="logo-link">
-            <!-- SmileSchool Logo -->
-            <img src="image_url.jpg" alt="SmileLogo" id="logo-img">
-        </a>
-        <!-- Menu Links -->
-        <div id="menu-links">
-            <a href="#" class="menu-link">COURSES</a>
-            <a href="#" class="menu-link">PRICING</a>
-            <a href="#" class="menu-link">LOGIN</a>
+    <header>
+        <!-- Container for links/logo -->
+        <div id="navigation-bar">
+            <a href="link_url" id="logo-link">
+                <!-- SmileSchool Logo -->
+                <img src="images/logo_with_name.png" alt="SmileLogo" id="logo-img">
+            </a>
+            <!-- Menu Links -->
+            <div id="menu-container">
+                <a href="#" class="menu-link">COURSES</a>
+                <a href="#" class="menu-link">PRICING</a>
+                <a href="#'" class="menu-link">LOGIN</a>
+            </div>
         </div>
+
+        <!-- Banner -->
         <section id="banner-section">
-            <!-- Banner -->
             <div id="banner">
                 <h1 id="banner-heading">Get schooled </h1>
                 <p id="banner-subheading"> SMILES GRIN LAUGH</p>
