--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -30,7 +30,7 @@
             <div id="banner">
                 <h1 id="banner-heading">Get schooled </h1>
                 <p id="banner-subheading"> SMILES GRIN LAUGH</p>
-                <button id="register-button"> Register for free </button>
+                <button id="register-button"> REGISTER FOR FREE </button>
             </div>
             <!-- Pro Head Shots with Awards-->
             <div id="pro-section">
