--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -34,29 +34,30 @@
             </div>
             <!-- Pro Head Shots with Awards-->
             <div id="pro-section">
-            <h2 id="pro-heading"> Learn from the pros </h2>
+                <h2 id="pro-heading">
+                    <span id="learn">Learn</span> <span id="from-the-pros"> from the pros</span></h2>
             <div id="pro-headshots">
                 <!-- Phillip Massey -->
                 <div class="pro-container" id="phillip">
-                    <img src="phillip_massey.jpg" alt="PhillipMassey" class="pro-img">
+                    <img src="images/phillip.png" alt="PhillipMassey" class="pro-img">
                     <h3 class="pro-name">Phillip Massey</h3>
                     <p class="pro-award">&laquo;Smile of the year&raquo; 2018-2019</p>
                 </div>
                 <!-- Nannie Lawrence -->
                 <div class="pro-container" id="nannie">
-                    <img src="nannie_lawrence.jpg" alt="NannieLawrence" class="pro-img">
+                    <img src="images/nannie.png" alt="NannieLawrence" class="pro-img">
                     <h3 class="pro-name">Nannie Lawrence</h3>
                     <p class="pro-award"> Best &laquo;little smile&raquo; 2017</p>
                 </div>
                 <!-- Bruce Walters -->
                 <div class="pro-container" id="bruce">
-                    <img src="bruce_walters.jpg" alt="BruceWalters" class="pro-img">
+                    <img src="images/bruce.png" alt="BruceWalters" class="pro-img">
                     <h3 class="pro-name">Bruce Walters</h3>
                     <p class="pro-award"> Best &laquo;Friend Smile&raquo; live performance 2019</p>
                 </div>
                 <!-- Henry Hughes -->
                 <div class="pro-container" id="henry">
-                    <img src="henry_hughes.jpg" alt="HenryHughes" class="pro-img">
+                    <img src="images/henry.png" alt="HenryHughes" class="pro-img">
                     <h3 class="pro-name">Henry Hughes</h3>
                     <p class="pro-award">&laquo;24h smiles&raquo; winner 2016 - 2019 </p>
                 </div>
