mid-tutorial push

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -71,7 +71,7 @@
         <section id="testimonial-section">
             <div id="testimonial">
                 <!-- Laughing guy with quote -->
-                <img src="quote_image.jpg" alt="QuoteImage" id="quote-img">
+                <img src="images/testimonial.png" alt="QuoteImage" id="quote-img">
                 <div id="quote-text">
                     <blockquote>
                        &laquo;Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!  
@@ -84,23 +84,25 @@
 
         <!-- Tutorial Section with Video Links -->
         <section id="tutorials-section">
-            <h1 id="tutorials-heading">Most popular tutorials</h1>
+            <h1 id="tutorials-heading">Most<span id="popular"> popular </span>tutorials</h1>
             <div id="tutorials">
                 <!-- Diagonal Smile -->
                 <div class="tutorial-card" id="diagonal-smile">
-                    <img src="diagonal_smile.jpg" alt="DiagonalSmile" class="tutorial-img">
+                    <img src="images/diagonalsmile.png" alt="DiagonalSmile" class="tutorial-img">
                     <h2 class="tutorial-title">Diagonal Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
-                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <div class="author-details">
+                        <img src="images/phillip.png" alt="PhillipMassey" class="author-img">
                         <h3 class="author-name">Phillip Massey</h3>
+                        </div>
                     <div class="tutorial-rating">
                         <div class="star-rating">
-                            <img src="1star.jpg" alt="1-star" class="star-img">
-                            <img src="2star.jpg" alt="2-star" class="star-img">
-                            <img src="3star.jpg" alt="3-star" class="star-img">
-                            <img src="4star.jpg" alt="4-star" class="star-img">
-                            <img src="5star.jpg" alt="5-star" class="star-img">
+                            <img src="images/Star_1.png" alt="1-star" class="star-img">
+                            <img src="images/Star_2.png" alt="2-star" class="star-img">
+                            <img src="images/Star_3.png" alt="3-star" class="star-img">
+                            <img src="images/Star_4.png" alt="4-star" class="star-img">
+                            <img src="images/Star_5_blank.png" alt="5-star" class="star-img">
                         </div>
                         <p class="tutorial-length">8 min</p>
                     </div>
@@ -108,19 +110,21 @@
                 </div>
                 <!-- Sad Smile -->
                 <div class="tutorial-card" id="sad-smile">
-                    <img src="sad_smile.jpg" alt="SadSmile" class="tutorial-img">
+                    <img src="images/sadsmile.png" alt="SadSmile" class="tutorial-img">
                     <h2 class="tutorial-title">Sad Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
-                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <div class="author-details">
+                        <img src="images/phillip.png" alt="PhillipMassey" class="author-img">
                         <h3 class="author-name">Phillip Massey</h3>
+                        </div>
                     <div class="tutorial-rating">
                         <div class="star-rating">
-                            <img src="1star.jpg" alt="1-star" class="star-img">
-                            <img src="2star.jpg" alt="2-star" class="star-img">
-                            <img src="3star.jpg" alt="3-star" class="star-img">
-                            <img src="4star.jpg" alt="4-star" class="star-img">
-                            <img src="5star.jpg" alt="5-star" class="star-img">
+                            <img src="images/Star_1.png" alt="1-star" class="star-img">
+                            <img src="images/Star_2.png" alt="2-star" class="star-img">
+                            <img src="images/Star_3.png" alt="3-star" class="star-img">
+                            <img src="images/Star_4.png" alt="4-star" class="star-img">
+                            <img src="images/Star_5_blank.png" alt="5-star" class="star-img">
                         </div>
                         <p class="tutorial-length">8 min</p>
                     </div>
@@ -128,19 +132,21 @@
                 </div>
                 <!-- Natural Smile -->
                 <div class="tutorial-card" id="natural-smile">
-                    <img src="natural_smile.jpg" alt="NaturalSmile" class="tutorial-img">
+                    <img src="images/naturalsmile.png" alt="NaturalSmile" class="tutorial-img">
                     <h2 class="tutorial-title">Natural Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
-                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <div class="author-details">
+                        <img src="images/phillip.png" alt="PhillipMassey" class="author-img">
                         <h3 class="author-name">Phillip Massey</h3>
+                        </div>
                     <div class="tutorial-rating">
                         <div class="star-rating">
-                            <img src="1star.jpg" alt="1-star" class="star-img">
-                            <img src="2star.jpg" alt="2-star" class="star-img">
-                            <img src="3star.jpg" alt="3-star" class="star-img">
-                            <img src="4star.jpg" alt="4-star" class="star-img">
-                            <img src="5star.jpg" alt="5-star" class="star-img">
+                            <img src="images/Star_1.png" alt="1-star" class="star-img">
+                            <img src="images/Star_2.png" alt="2-star" class="star-img">
+                            <img src="images/Star_3.png" alt="3-star" class="star-img">
+                            <img src="images/Star_4.png" alt="4-star" class="star-img">
+                            <img src="images/Star_5_blank.png" alt="5-star" class="star-img">
                         </div>
                         <p class="tutorial-length">8 min</p>
                     </div>
@@ -148,19 +154,21 @@
                 </div>
                 <!-- Happy Smile -->
                 <div class="tutorial-card" id="happy-smile">
-                    <img src="happy_smile.jpg" alt="HappySmile" class="tutorial-img">
+                    <img src="images/happysmile.png" alt="HappySmile" class="tutorial-img">
                     <h2 class="tutorial-title">Happy Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
-                        <img src="phillip_massey.jpg" alt="PhillipMassey" class="author-img">
+                        <div class="author-details">
+                        <img src="images/phillip.png" alt="PhillipMassey" class="author-img">
                         <h3 class="author-name">Phillip Massey</h3>
+                        </div>
                     <div class="tutorial-rating">
                         <div class="star-rating">
-                            <img src="1star.jpg" alt="1-star" class="star-img">
-                            <img src="2star.jpg" alt="2-star" class="star-img">
-                            <img src="3star.jpg" alt="3-star" class="star-img">
-                            <img src="4star.jpg" alt="4-star" class="star-img">
-                            <img src="5star.jpg" alt="5-star" class="star-img">
+                            <img src="images/Star_1.png" alt="1-star" class="star-img">
+                            <img src="images/Star_2.png" alt="2-star" class="star-img">
+                            <img src="images/Star_3.png" alt="3-star" class="star-img">
+                            <img src="images/Star_4.png" alt="4-star" class="star-img">
+                            <img src="images/Star_5_blank.png" alt="5-star" class="star-img">
                         </div>
                         <p class="tutorial-length">8 min</p>
                     </div>
